--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile.jpg" alt="">
+                    <img src="images/profile.jpg" alt="" download>
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
