--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile.jpg" alt="" download>
+                    <img src="images/profile.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
                     <p>I have pursued a Bachelor of Science in Applied Computer Science at Kisii University, Kenya. I am currently working with the County Government
                         of Nakuru City as a Data Scientist.
                     </p>
-                    <a href="Paul_Magu_Cv.pdf">Download CV</a>
+                    <a download href="Paul_Magu_Cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
