--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p>I have pursued a Bachelor of Science in Applied Computer Science at Kisii University, Kenya. I am currently working with the County Government
                         of Nakuru City as a Data Scientist.
                     </p>
-                    <a download href="/Paul_Magu_Cv.pdf">Download CV</a>
+                    <a download href="Paul_Magu_Cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
